[project]
name = "u-teach-me"
version = "0.1.0"
description = "A GUI Agent based on IDM & OpenAI VPT."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.3",
    "packaging>=25.0",
    "pillow<=12.1.1",
    "pynput>=1.8.1",
    "torch>=2.6.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/nightly/cu128"
